updated alignment issue in query<600px

--- a/styles/signInsignup_media_q.css
+++ b/styles/signInsignup_media_q.css
@@ -42,27 +42,27 @@
 @media screen and (min-width: 500px) and (max-width: 600px) {
   .background {
     width: 70%;
-    left: 15%;
+    left: 13%;
   }
   .background2 {
     width: 70%;
-    left: 15%;
+    left: 13%;
   }
   .background3 {
     width: 70%;
-    left: 15%;
+    left: 13%;
   }
   .background4 {
     width: 70%;
     left: 1%;
   }
   .form-container {
-    left: 15%;
+    left: 13%;
     width: 70%;
     padding: 20px 0;
   }
   .form-container2 {
-    left: 15%;
+    left: 13%;
     width: 70%;
     padding: 20px 0;
   }
